@@ -10,7 +10,6 @@ $h{a} = {z => 26, y => {1 => 2}};
 $h{b} = 12;
 $h{c} = {m => {3 => 3}};
 $h{c}->{n} = 3;
-<>;
 
 print Dumper \%h;
 
